--- a/css/styles.css
+++ b/css/styles.css
@@ -54,8 +54,10 @@ h2 {
 }
 
 a {
-  color: #00FF00;
+  color: #1e90ff;
   text-decoration: none;
+  text-decoration: underline;
+  font-weight: bold;
 }
 
 a:hover {
